<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_add_business_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ui.AddBusinessCardActivity">

    <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/label_botaofechar"/>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/label_description_new_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_close"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="16dp"
            android:hint="@string/label_nome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_especialidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="16dp"
            android:hint="@string/label_especialidade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_nome">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_telefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="16dp"
            android:hint="@string/label_telefone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_especialidade">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="16dp"
            android:hint="@string/label_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_telefone">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/txt_senioridade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/label_senioridade"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="1.0"/>


    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_senioridade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:paddingStart="8dp"
            android:layout_marginStart="2dp"
            android:entries="@array/senioridade"
            android:hint="@string/label_cor"
            app:layout_constraintBottom_toBottomOf="@id/txt_senioridade"
            app:layout_constraintStart_toEndOf="@+id/txt_senioridade"
            app:layout_constraintTop_toBottomOf="@+id/til_email" tools:ignore="RtlSymmetry">
    </androidx.appcompat.widget.AppCompatSpinner>

    <TextView
            android:id="@+id/txt_cor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/label_cor"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/sp_senioridade"
            app:layout_constraintTop_toBottomOf="@+id/til_email"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="1.0"/>

    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_cor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:entries="@array/cores"
            android:hint="@string/label_cor"
            app:layout_constraintBottom_toBottomOf="@id/txt_cor"
            app:layout_constraintStart_toEndOf="@+id/txt_cor"
            app:layout_constraintTop_toBottomOf="@+id/til_email">
    </androidx.appcompat.widget.AppCompatSpinner>

    <TextView
            android:id="@+id/txt_habilidades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/label_escolha_2_habilidades"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_senioridade"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            />

    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_java"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:textSize="18sp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_habilidades"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_java"/>

    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_kotlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:textSize="18sp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_habilidades"
            app:layout_constraintStart_toEndOf="@id/cb_java"
            android:text="@string/label_kotlin"/>

    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_csharp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:textSize="18sp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_habilidades"
            app:layout_constraintStart_toEndOf="@id/cb_kotlin"
            android:text="@string/label_csharp"/>

    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_sql"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:textSize="18sp"
            android:padding="2dp"
            android:layout_marginRight="18dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_habilidades"
            app:layout_constraintStart_toEndOf="@id/cb_csharp"
            android:text="@string/label_sql"/>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/label_confirmar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_java"
            android:background="@color/colorAccent"
            android:clickable="true"
    />




</androidx.constraintlayout.widget.ConstraintLayout>